# savane

./: .editorconfig  .gitignore  AUTHORS  AUTHORS.Savannah  Makefile.am  Makefile.in.savane  README  REQUIREMENTS  TODO  configure.ac  configure.sh  run-local-dev-macos-brew.sh  run-local-dev.sh
db/mysql/: table_bugs.initvalues  table_bugs.structure  table_bugs_canned_responses.structure  table_bugs_cc.structure  table_bugs_dependencies.structure  table_bugs_field.initvalues  table_bugs_field.structure  table_bugs_field_usage.initvalues  table_bugs_field_usage.structure  table_bugs_field_value.initvalues  table_bugs_field_value.structure  table_bugs_filter.structure  table_bugs_history.structure  table_bugs_report.initvalues  table_bugs_report.structure  table_bugs_report_field.initvalues  table_bugs_report_field.structure  table_cookbook.initvalues  table_cookbook.structure  table_cookbook_canned_responses.structure  table_cookbook_cc.structure  table_cookbook_context2recipe.initvalues  table_cookbook_context2recipe.structure  table_cookbook_dependencies.structure  table_cookbook_field.initvalues  table_cookbook_field.structure  table_cookbook_field_usage.initvalues  table_cookbook_field_usage.structure  table_cookbook_field_value.initvalues  table_cookbook_field_value.structure  table_cookbook_filter.structure  table_cookbook_history.structure  table_cookbook_report.initvalues  table_cookbook_report.structure  (+109 more)
debian/: control
devel/: sv_export_db.pl
local/: Makefile.am
local2/: init_local_data_dir.sh  local.php
tests/: run_all_tests.php  test_include_utils.php
(+130 files in other folders)
